Added less files as copies of css files, started to lessify them

--- a/themes/claro/layout/TabContainer_rtl.less
+++ b/themes/claro/layout/TabContainer_rtl.less
@@ -15,9 +15,8 @@
 .dj_ie7 .claro .dijitTabContainerTop-tabs .dijitTabCheckedRtl {
 	top: 1px;
 }
-/* Second line needed for IE8 quirks, but breaks IE6 quirks */
 .dj_ie7 .claro .tabStripButtonRtl .dijitButtonContents,
-.dj_ie8 .claro .tabStripButtonRtl .dijitButtonContents,
+.dj_ie8 .claro .tabStripButtonRtl .dijitButtonContents,	/* needed for IE8 quirks, but breaks IE6 quirks */
 .dj_ie6 .claro .dijitTabContainerTop-tabs .dijitTabRtl .dijitTabInnerDiv,
 .dj_ie6 .claro .dijitTabContainerBottom-tabs .dijitTabRtl .dijitTabInnerDiv,
 .dj_ie7 .claro .dijitTabContainerTop-tabs .dijitTabRtl .dijitTabInnerDiv,
