--- a/themes/claro/Calendar.css
+++ b/themes/claro/Calendar.css
@@ -1,265 +1,196 @@
-/* Calendar
- * 
- * Styling Calendar mainly includes:
- * 
- * 1. Calendar container
- * 		.dijitCalendar - main container
- * 		.dijitCalendarHover / .dijitCalendarActive - states e.g. hover,active
- * 
- * 2. Month
- * 		.dijitCalendarMonthContainer
- * 		.dijitCalendarMonthLabel
- *      .dijitCalendarDecrease / .dijitCalendarDecrease - icons for switching to previous/next month
- *      .dijitCalendarArrowActive .dijitCalendarDecrease - states e.g. hover,active
- * 
- * 3. Date
- * 		.dijitCalendarDayLabelTemplate - week day column header e.g. S M T w T F S
- * 		.dijitCalendarDateTemplate - date label wrapper
- * 		.dijitCalendarPreviousMonth .dijitCalendarDateLabel - special labels for previous or next month
- *      .dijitCalendarSelectedDate .dijitCalendarDateLabel - styles for selected date
- * 		.dijitCalendarDisabledDate .dijitCalendarDateLabel - styles for disabled date
- * 		.dijitCalendarActiveDate .dijitCalendarDateLabel - states e.g. hover,active
- * 
- * 4. Year
- * 		.dijitCalendarYearContainer
- * 		.dijitCalendarYearLabel
- * 		.dijitCalendarPreviousYear /.dijitCalendarNextYear
- *      .dijitCalendarNextYearHover / .dijitCalendarPreviousYearHover - states e.g. hover,active
- *      
- * 5. Dropdown Month Menu
- * 		.dijitCalendarMonthMenu - menu container     
- * 		.dijitCalendarMonthMenu .dijitCalendarMonthLabel - month label in menu item
- * 		.dijitCalendarMonthMenu .dijitCalendarMonthLabelHover - menu item hover state
- */
-
 .claro .dijitCalendar {
-	border:solid 1px #b5bcc7;
-	background-color:#d4ebff;
-	background-image:url("images/calendarContainerImages.png");
-	background-position:0px -448px;
-	background-repeat:repeat-x;
-	text-align:center;
-	padding:6px 5px 3px 5px;
-	-moz-border-radius:4px;
-	-webkit-border-radius:4px;	
+  border: solid 1px #b5bcc7;
+  background-color: #d4ebff;
+  background-image: url("images/calendarContainerImages.png");
+  background-position: 0px -448px;
+  background-repeat: repeat-x;
+  text-align: center;
+  padding: 6px 5px 3px 5px;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
 }
-.dj_ie6 .claro .dijitCalendar {
-	background-image:none;
+.claro .dijitCalendar img { border: none; }
+.claro .dijitCalendarHover {
+  background-color: #b7dcff;
+  border: solid 1px #769dc0;
 }
-.claro .dijitCalendar img {
-	border:none;
-}
-.claro .dijitCalendarHover,
 .claro .dijitCalendarActive {
-	background-color: #b7dcff;
-	border:solid 1px #769dc0;
+  background-color: #b7dcff;
+  border: solid 1px #769dc0;
 }
 .claro .dijitCalendarMonthContainer th {
-	text-align:center;
-	padding-bottom:4px;
-	vertical-align:middle;
+  text-align: center;
+  padding-bottom: 4px;
+  vertical-align: middle;
 }
 .claro .dijitCalendarMonthLabel {
-	color:#000000;
-	font-size: 1.091em;
-	padding: 0px 4px;
+  color: #000000;
+  font-size: 1.091em;
+  padding: 0px 4px;
 }
-
-/* next/previous month arrows */
 .claro .dijitCalendarIncrementControl {
-	width:18px;
-	height:16px;
-	background-image: url("images/calendarArrows.png");
-	background-repeat: no-repeat;
+  width: 18px;
+  height: 16px;
+  background-image: url("images/calendarArrows.png");
+  background-repeat: no-repeat;
 }
-.dj_ie6 .claro .dijitCalendarIncrementControl {
-	background-image: url("images/calendarArrows8bit.png");
-}
-.claro .dijitCalendarIncrease {
-	background-position:-18px 0px;
-}
-.claro .dijitCalendarArrowHover .dijitCalendarDecrease {
-	background-position:-36px 0px;
-}
-.claro .dijitCalendarArrowHover .dijitCalendarIncrease {
-	background-position:-55px 0px;
-}
-.claro .dijitCalendarArrowActive .dijitCalendarDecrease {
-	background-position:-72px 0px;
-}
-.claro .dijitCalendarArrowActive .dijitCalendarIncrease {
-	background-position:-91px 0px;
-}
-.claro .dijitA11ySideArrow {
-	/* text +/- labels instead of arrow icons, for high contrast mode */
-	display: none;
-}
-
-
+.claro .dijitCalendarIncrease { background-position: -18px 0px; }
+.claro .dijitCalendarArrowHover .dijitCalendarDecrease { background-position: -36px 0px; }
+.claro .dijitCalendarArrowHover .dijitCalendarIncrease { background-position: -55px 0px; }
+.claro .dijitCalendarArrowActive .dijitCalendarDecrease { background-position: -72px 0px; }
+.claro .dijitCalendarArrowActive .dijitCalendarIncrease { background-position: -91px 0px; }
+.claro .dijitA11ySideArrow { display: none; }
 .claro .dijitDayLabels th {
-	padding:0px 4px 0px 4px;
-	border-bottom:solid 1px #99b5cd;
-	font-weight:bold;
-	text-align:center;
+  padding: 0px 4px 0px 4px;
+  border-bottom: solid 1px #99b5cd;
+  font-weight: bold;
+  text-align: center;
 }
 .claro .dijitCalendarDayLabelTemplate {
-	padding-bottom:0em;
-	text-align:center;
-	border-bottom:1px solid #99B5CD;
-	font-size:0.909em;
-	padding:0 3px 2px;
+  padding-bottom: 0em;
+  text-align: center;
+  border-bottom: 1px solid #99b5cd;
+  font-size: 0.909em;
+  padding: 0 3px 2px;
 }
 .claro .dijitCalendarDateTemplate {
-	text-align:center;
-	background-color:#fff;
-	background-image:url("images/calendarContainerImages.png");
-	background-position:0px 0px;
-	background-repeat:repeat-x;
-	border-bottom: 1px solid #dadde1;
-	padding-top:0px;
-	font-size:0.909em;
-	font-family: Arial;
-	font-weight:bold;
-	letter-spacing:.05em;
-	text-align:center;
+  text-align: center;
+  background-color: #ffffff;
+  background-image: url("images/calendarContainerImages.png");
+  background-position: 0px 0px;
+  background-repeat: repeat-x;
+  border-bottom: 1px solid #dadde1;
+  padding-top: 0px;
+  font-size: 0.909em;
+  font-family: Arial;
+  font-weight: bold;
+  letter-spacing: 0.05em;
+  text-align: center;
 }
-.dj_ie6 .claro .dijitCalendarDateTemplate {
-	background-image: none;
+.claro .dijitCalendarPreviousMonth {
+  background-color: #ebf3f9;
+  background-image: none;
+  border-bottom: solid 1px #d2dae8;
+  color: #547da1;
 }
-.claro .dijitCalendarPreviousMonth,
 .claro .dijitCalendarNextMonth {
-	background-color:#ebf3f9;
-	background-image:none;
-	border-bottom:solid 1px #d2dae8;
-	color:#547da1;
+  background-color: #ebf3f9;
+  background-image: none;
+  border-bottom: solid 1px #d2dae8;
+  color: #547da1;
 }
 .claro .dijitCalendarDateTemplate .dijitCalendarDateLabel {
-	text-decoration:none;
-	display:block;
-	padding:3px 5px 3px 4px;
-	border:solid 1px #fff;
-	color:#1e1e1e;
-	background-color:rgba(171,212,251,0);	/* transparent causes black-flash animation problem on webkit */
-	-webkit-transition-property:background-color, border;
- 	-webkit-transition-duration:.35s;
+  text-decoration: none;
+  display: block;
+  padding: 3px 5px 3px 4px;
+  border: solid 1px #ffffff;
+  color: #1e1e1e;
+  background-color: rgba(171, 212, 251, 0);
+  -webkit-transition-property: background-color, border;
+  -webkit-transition-duration: 0.35s;
 }
-.claro .dijitCalendarPreviousMonth .dijitCalendarDateLabel,
-.claro .dijitCalendarNextMonth .dijitCalendarDateLabel{
-	color:#547da1;
-	border-color:#ebf3f9;
+.claro .dijitCalendarPreviousMonth .dijitCalendarDateLabel {
+  color: #547da1;
+  border-color: #ebf3f9;
 }
-
-.claro .dijitCalendarYearContainer {
-	vertical-align:middle;
+.claro .dijitCalendarNextMonth .dijitCalendarDateLabel {
+  color: #547da1;
+  border-color: #ebf3f9;
 }
-.claro .dijitCalendarYearControl {
-	padding: 1px 2px 2px 2px;
-}
+.claro .dijitCalendarYearContainer { vertical-align: middle; }
+.claro .dijitCalendarYearControl { padding: 1px 2px 2px 2px; }
 .claro .dijitCalendarYearLabel {
-	padding:2px 0px 0px 0px;
-	margin:0;
+  padding: 2px 0px 0px 0px;
+  margin: 0;
 }
-.claro .dijitCalendarYearLabel span {
-	/* trying to center next/current/previous year vertically, doesn't work on IE6/7 though */
-	vertical-align:middle;
-}
+.claro .dijitCalendarYearLabel span { vertical-align: middle; }
 .claro .dijitCalendarSelectedYear {
-	padding:0px 3px;
+  padding: 0px 3px;
+  font-size: 1.091em;
+  color: #000000;
 }
-.claro .dijitCalendarNextYear,
+.claro .dijitCalendarNextYear {
+  padding: 1px 6px 1px 6px;
+  font-size: 0.909em;
+}
 .claro .dijitCalendarPreviousYear {
-	padding: 1px 6px 1px 6px;
-	font-size:0.909em;
+  padding: 1px 6px 1px 6px;
+  font-size: 0.909em;
 }
-.claro .dijitCalendarSelectedYear {
-	font-size:1.091em;
-	color:#000;
+.claro .dijitCalendarHoveredDate .dijitCalendarDateLabel {
+  background-color: #abd4fb;
+  border: solid 1px #729dc2;
+  color: #000000;
+  -webkit-transition-duration: 0.2s;
 }
-/* End Normal Calendar Style */
-/* Hovered Calendar Style */
-.claro .dijitCalendarHoveredDate .dijitCalendarDateLabel{
-	background-color:#abd4fb;
-	border:solid 1px #729dc2;
-	color:#000;
-	-webkit-transition-duration:.2s;
+.claro .dijitCalendarNextYearHover {
+  color: #000000;
+  border: solid 1px #fefefe;
+  padding: 0px 5px 0px 5px;
+  background-color: #eaf4fe;
 }
-.claro .dijitCalendarNextYearHover,
 .claro .dijitCalendarPreviousYearHover {
-	color:#000;
-	border:solid 1px #fefefe;
-	padding: 0px 5px 0px 5px;	/* reduced by 1 to make room for border */
-	background-color:#eaf4fe;
+  color: #000000;
+  border: solid 1px #fefefe;
+  padding: 0px 5px 0px 5px;
+  background-color: #eaf4fe;
 }
-/* End Hovered Calendar Style */
-/* Active Calendar Style */
-.claro .dijitCalendarNextYearActive,
+.claro .dijitCalendarNextYearActive {
+  border: solid 1px #87b3d9;
+  padding: 0px 5px 0px 5px;
+  background-color: #90bde6;
+}
 .claro .dijitCalendarPreviousYearActive {
-	border: solid 1px #87b3d9;
-	padding: 0px 5px 0px 5px;	/* reduced by 1 to make room for border */
-	background-color:#90bde6;
+  border: solid 1px #87b3d9;
+  padding: 0px 5px 0px 5px;
+  background-color: #90bde6;
 }
 .claro .dijitCalendarActiveDate .dijitCalendarDateLabel {
-	background-image:url("images/calendarContainerImages.png");
-	background-position:0px -300px;
-	background-color:#75b5f0;
-	border:solid 1px #fff;
-	-webkit-transition-duration:.1s;
+  background-image: url("images/calendarContainerImages.png");
+  background-position: 0px -300px;
+  background-color: #75b5f0;
+  border: solid 1px #ffffff;
+  -webkit-transition-duration: 0.1s;
 }
-.dj_ie6 .claro .dijitCalendarActiveDate .dijitCalendarDateLabel {
-	background-image:none;
-}
-/* End Active Calendar Style */
-/* Selected Calendar Style */
 .claro .dijitCalendarSelectedDate .dijitCalendarDateLabel {
-	color:#000;
-	background-color:#e7f4ff;
-	border-color:#accfed;
+  color: #000000;
+  background-color: #e7f4ff;
+  border-color: #accfed;
 }
-/* End Selected Calendar Style */
-/* Disabled Calendar Style*/
 .claro .dijitCalendarDisabledDate .dijitCalendarDateLabel {
-	text-decoration:line-through;
-	
-	/* override hover effects above, hover and click on disabled date should have no effect */
-	background-color: transparent;
-	border-width: 0px;
-	padding: 4px 6px 4px 5px;
-	color: #547DA1;
+  text-decoration: line-through;
+  background-color: transparent;
+  border-width: 0px;
+  padding: 4px 6px 4px 5px;
+  color: #547da1;
 }
-
-/* End Disabled Calendar Style */
-
-/* Styling for month DropDownButton */
-
-.claro .dijitCalendar .dijitDropDownButton {
-	margin: 0px;
-}
-.claro .dijitCalendar .dijitButtonText {
-	padding: 0px;
-}
+.claro .dijitCalendar .dijitDropDownButton { margin: 0px; }
+.claro .dijitCalendar .dijitButtonText { padding: 0px; }
 .claro .dijitCalendar .dijitDropDownButton .dijitButtonNode {
-	background-color: transparent;
-	background-image: none;
-	padding: 0px;
+  background-color: transparent;
+  background-image: none;
+  padding: 0px;
 }
-
-/* Styling for month drop down list */
-
 .claro .dijitCalendarMonthMenu {
-	border-color: #769dc0;
-	background-color: #fff;
-	text-align:center;
-	background-image: none;
+  border-color: #769dc0;
+  background-color: #ffffff;
+  text-align: center;
+  background-image: none;
 }
 .claro .dijitCalendarMonthMenu .dijitCalendarMonthLabel {
-	border-top: solid 1px #fff;
-	border-bottom: solid 1px #fff;
-	padding: 2px 0px;
+  border-top: solid 1px #ffffff;
+  border-bottom: solid 1px #ffffff;
+  padding: 2px 0px;
 }
 .claro .dijitCalendarMonthMenu .dijitCalendarMonthLabelHover {
-	background-color: #abd6ff;
-	border-color: #769dc0;
-	border-width:1px 0px;
-	background-image: url("images/commonHighlight.png");
-	background-repeat:repeat-x;
+  background-color: #abd6ff;
+  border-color: #769dc0;
+  border-width: 1px 0px;
+  background-image: url("images/commonHighlight.png");
+  background-repeat: repeat-x;
 }
+.dj_ie6 .claro .dijitCalendar { background-image: none; }
+.dj_ie6 .claro .dijitCalendarIncrementControl { background-image: url("images/calendarArrows8bit.png"); }
+.dj_ie6 .claro .dijitCalendarDateTemplate { background-image: none; }
+.dj_ie6 .claro .dijitCalendarActiveDate .dijitCalendarDateLabel { background-image: none; }
