--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -31,12 +31,12 @@
 		Also, apparently works on a DIV as well as a FIELDSET.
 	*/
 	display:inline-block;			/* webkit and FF3 */
-	#zoom: 1; /* set hasLayout:true to mimic inline-block */
-	#display:inline; /* don't use .dj_ie since that increases the priority */
+	/*#zoom: 1; /* set hasLayout:true to mimic inline-block */
+	/*#display:inline; /* don't use .dj_ie since that increases the priority */
 	border:0;
 	padding:0;
 	vertical-align:middle;
-	#vertical-align: auto;	/* makes TextBox,Button line up w/native counterparts on IE6 */
+	/*#vertical-align: auto;	/* makes TextBox,Button line up w/native counterparts on IE6 */
 }
 
 .dijitHidden {
@@ -52,12 +52,12 @@
 
 .dijitInputContainer {
 	/* for positioning of placeHolder */
-	#zoom: 1;
+	/*#zoom: 1;*/
 	overflow: hidden;
 	float: none !important; /* needed by FF to squeeze the INPUT in */
 	position: relative;
 	vertical-align: middle;
-	#display: inline;
+	/*#display: inline;*/
 }
 
 .dj_ie INPUT.dijitTextBox,
@@ -82,8 +82,8 @@
 	/* To inline tables with a given width set (otherwise, use dijitInline above) */
 	display:inline-table;
 	display:inline-block;		/* webkit and FF3 */
-	#zoom: 1; /* set hasLayout:true to mimic inline-block */
-	#display:inline; /* don't use .dj_ie since that increases the priority */
+	/*#zoom: 1; /* set hasLayout:true to mimic inline-block */
+	/*#display:inline; /* don't use .dj_ie since that increases the priority */
 	box-sizing: content-box; -moz-box-sizing: content-box;
 	border:0;
 	padding:0;
@@ -161,7 +161,7 @@
 	background-image:none !important;
 }
 .dijit_a11y .dijitIcon,
-.dijit_a11y DIV.dijitArrowButtonInner, /* is this only for Spinner?  if so, it should be deleted */
+.dijit_a11y DIV.dijitArrowButtonInner, 
 .dijit_a11y SPAN.dijitArrowButtonInner,
 .dijit_a11y IMG.dijitArrowButtonInner,
 .dijit_a11y .dijitCalendarIncrementControl {
@@ -245,7 +245,7 @@
 
 .dijitRight {
 	/* Right part of a 3-element border */
-	#display:inline;				/* IE7 sizes to outer size w/o this */
+	/*#display:inline;				/* IE7 sizes to outer size w/o this */
 	background-position:right top;
 	background-repeat:no-repeat;
 }
@@ -305,7 +305,7 @@ td.dijitButtonContents {
 	margin:0;
 	line-height:normal;
 	vertical-align: middle;
-	#vertical-align: auto;
+	/*#vertical-align: auto;*/
 	text-align:center;
 	white-space: nowrap;
 }
@@ -347,7 +347,7 @@ DIV.dijitArrowButton {
 
 .dijitTextBox {
 	border: solid black 1px;
-	#overflow: hidden; /* #6027, #6067 */
+	/*#overflow: hidden; /* #6027, #6067 */
 	width: 15em;	/* need to set default size on outer node since inner nodes say <input style="width:100%"> and <td width=100%>.  user can override */
 	vertical-align: middle;
 }
@@ -374,7 +374,7 @@ DIV.dijitArrowButton {
 	position: absolute;
 	top: 0;
 	left: 0;
-	#filter: ""; /* make this showup in IE6 after the rendering of the widget */
+	/*#filter: ""; /* make this showup in IE6 after the rendering of the widget */
 }
 
 .dijitTimeTextBox {
@@ -416,9 +416,9 @@ DIV.dijitArrowButton {
 	direction: ltr !important;
 	text-align: left !important;
 	height: auto !important;
-	#text-indent: 0 !important;
-	#letter-spacing: -5em !important;
-	#text-align: right !important;
+	/*#text-indent: 0 !important;*/
+	/*#letter-spacing: -5em !important;*/
+	/*#text-align: right !important;*/
 }
 .dj_ie .dijitTextBox INPUT,
 .dj_ie INPUT.dijitTextBox {
@@ -443,7 +443,7 @@ DIV.dijitArrowButton {
 	/* (in high contrast mode) revert rules from above so character displays */
 	text-indent: 0 !important;
 	width: 1em !important;
-	#text-align: left !important;
+	/*#text-align: left !important;*/
 }
 .dijitTextBoxError .dijitValidationContainer {
 	display: inline;
@@ -551,7 +551,7 @@ DIV.dijitArrowButton {
 	border-top-width: 1px !important;
 }
 .dijitSpinner .dijitSpinnerButtonContainer .dijitUpArrowButton {
-	#bottom: 50%;	/* otherwise (on some machines) top arrow icon too close to splitter border (IE6/7) */
+	/*#bottom: 50%;	/* otherwise (on some machines) top arrow icon too close to splitter border (IE6/7) */
 	top: 0;
 }
 .dijitSpinner .dijitArrowButtonInner {
@@ -1385,8 +1385,8 @@ DIV.dijitTabDisabled, .dj_ie DIV.dijitTabDisabled {
 .dijitTabContainerBottom-tabs .dijitTab {
 	/* Inline-block */
 	display:inline-block;			/* webkit and FF3 */
-	#zoom: 1; /* set hasLayout:true to mimic inline-block */
-	#display:inline; /* don't use .dj_ie since that increases the priority */
+	/*#zoom: 1; /* set hasLayout:true to mimic inline-block */
+	/*#display:inline; /* don't use .dj_ie since that increases the priority */
 }
 
 .dijitTabInnerDiv {
@@ -1860,7 +1860,7 @@ DIV.dijitTabDisabled, .dj_ie DIV.dijitTabDisabled {
 .dijitIEFixedToolbar {
 	position:absolute;
 	/* top:0; */
-	top: expression(eval((document.documentElement||document.body).scrollTop));
+	/*top: expression(eval((document.documentElement||document.body).scrollTop));*/
 }
 
 .dijitEditor {
