--- a/themes/claro/ColorPalette.less
+++ b/themes/claro/ColorPalette.less
@@ -26,13 +26,13 @@
 @import "variables";
 
 // Variables
-@colorPaletteOutlineColor: #defaults[@boldBorderColor];
+@colorPaletteOutlineColor: @boldBorderColor;
 @colorPaletteBorderColor: #c0ccdf;
-@colorPaletteCellBorderColor: #defaults[@color];
+@colorPaletteCellBorderColor: @color;
 @colorPaletteImgBorderColor: #cecece;
-@colorPaletteEmptyBackgroundColor: #defaults[@emptyBackground];
+@colorPaletteEmptyBackgroundColor: @emptyBackground;
 
-@colorPaletteBorderWidth: #defaults[@borderWidth];
+@colorPaletteBorderWidth: @borderWidth;
 
 // CSS
 .claro {
