--- a/themes/claro/Common.css
+++ b/themes/claro/Common.css
@@ -4,9 +4,9 @@
   -moz-box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.25);
 }
 .claro .dijitTooltipDialogPopup {
-  box-shadow: none;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.25);
 }
 .claro .dijitComboBoxHighlightMatch { background-color: #a5beda; }
 .claro .dijitFocusedLabel { outline: 1px dotted #666666; }
@@ -26,7 +26,9 @@
   border: 1px solid #b5bcc7;
   border-collapse: collapse;
   background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
 }
 .claro .dojoDndAvatarHeader td {
   height: 20px;
