--- a/themes/claro/Common.less
+++ b/themes/claro/Common.less
@@ -1,16 +1,17 @@
 /* ========= Styling rules to affect widgets ========= */
 
+@import 'variables';
+@import 'mixins';
+
+// CSS
 .claro {	
 	.dijitPopup {
-		box-shadow: 0px 1px 5px rgba(0,0,0,0.25);
-		-webkit-box-shadow: 0px 1px 5px rgba(0,0,0,0.25);
-		-moz-box-shadow: 0px 1px 5px rgba(0,0,0,0.25);
+		.boxShadow(@shadowHor, @shadowVer, @shadowBlur, @shadowColor);
 	}
 	.dijitTooltipDialogPopup {
 		/* exception popups: do not use a shadow on these because they aren't rectangular */
-		box-shadow: none;
-		-webkit-box-shadow: none;
-		-moz-box-shadow: none;
+		// TODO: I dont really like this. used to be 'box-shadow: none;', which seems neater
+		.boxShadow(@none, @none, @none);
 	}
 
 	/* The highlight is shown in the ComboBox menu. */
@@ -20,7 +21,12 @@
 
 	.dijitFocusedLabel {
 		/* for checkboxes or radio buttons, hatch border around the corresponding label, to indicate focus */
-		outline: 1px dotted #666666;
+		/* 
+		 * TODO: Rather than use #666 it would be good to represent as '@color at 40% lightness', so if
+		 * @color changes this is reflected. Can't figure out how to do that - my color theory and
+		 * knowledge of less operations is not up to scratch yet.
+		 */
+		outline: @borderWidth dotted #666666;
 	}
 
 	.dijitContentPaneLoading {
@@ -38,16 +44,16 @@
 	/* Drag and Drop */
 	.dojoDndItemBefore,
 	.dojoDndItemAfter{
-		border-top: 1px solid #769DC0;
+		border-top: @borderWidth solid @boldBorderColor;
 	}
 	.dojoDndItemOver {
 		cursor:pointer;
 		}
 	table.dojoDndAvatar {
-		border: 1px solid #b5bcc7;
+		border: @borderWidth solid #b5bcc7;
 		border-collapse: collapse;
-		background-color: #fff;
-		-webkit-box-shadow:0px 1px 3px rgba(0, 0, 0, .25);
+		background-color: @emptyBackground;
+		.boxShadow(@shadowHor, @shadowVer, 0.6*@shadowBlur, @shadowColor);
 	}
 	.dojoDndAvatarHeader td	{ 
 		height: 20px;
@@ -63,23 +69,23 @@
 	.dojoDndAvatarHeader {
 		background-image: url(images/dnd.png);
 		background-repeat: no-repeat;
-		background-position:2px -122px;
+		background-position:@dndSpriteXStart (@dndSpriteYStart - 19 + 3*@dndSpriteYPeriod);
 	}	
 }
 
 .claro.dojoDndMove .dojoDndAvatarHeader	{
-	background-color: #f58383; 
-	background-position:2px -103px;
+	background-color: @dndNoDrop; 
+	background-position:@dndSpriteXStart (@dndSpriteYStart+3*@dndSpriteYPeriod);
 }
 .claro.dojoDndCopy .dojoDndAvatarHeader	{
-	background-color: #f58383; 
-	background-position:2px -68px;
+	background-color: @dndNoDrop; 
+	background-position:@dndSpriteXStart (@dndSpriteYStart+2*@dndSpriteYPeriod);
 }
 .claro.dojoDndMove .dojoDndAvatarCanDrop .dojoDndAvatarHeader	{
-	background-color: #97e68d; 
-	background-position:2px -33px;
+	background-color: @dndCanDrop; 
+	background-position:@dndSpriteXStart (@dndSpriteYStart+@dndSpriteYPeriod);
 }
 .claro.dojoDndCopy .dojoDndAvatarCanDrop .dojoDndAvatarHeader	{
-	background-color: #97e68d;
-	background-position:2px 2px;
+	background-color: @dndCanDrop;
+	background-position:@dndSpriteXStart @dndSpriteYStart;
 }
