--- a/themes/claro/variables.less
+++ b/themes/claro/variables.less
@@ -12,11 +12,16 @@
 
 // Colors
 @color: #000000;
+
 @emptyBackground: #ffffff;
+@focusedBackground: #abd6ff;
+
+@contrastingEmptyBackground: #f2f2f2;
 @dndNoDrop: #f58383;
 @dndCanDrop: #97e68d;
 
 @boldBorderColor: #769dc0;
+@contrastingBorderColor: #ffffff;
 
 // Positions
 @dndSpriteXStart: 2px;
