Revert Calendar.css and Dialog.css. Not sure how I overwrote those. Bad Tom

--- a/themes/claro/Calendar.css
+++ b/themes/claro/Calendar.css
@@ -180,7 +180,7 @@
 }
 .claro .dijitCalendarMonthMenu .dijitCalendarMonthLabel {
   border-top: solid 1px #ffffff;
-  border-bottom: solid solid 1px #ffffff;
+  border-bottom: solid 1px #ffffff;
   padding: 2px 0px;
 }
 .claro .dijitCalendarMonthMenu .dijitCalendarMonthLabelHover {
